--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         diun.enable: "true"
     spec:
       containers:
-      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
+      - image: corelab/ks-guestbook-demo:0.1
         name: guestbook-ui
         ports:
         - containerPort: 80
